css/mainstyle.css
/******************************
COLORS & FONTS
$background: #1C1C1D;
$pink: #cc4ff1;
$blue: #3b94e3;
$grey_light: #e0e0e0;
$grey_medium: darken($grey_light, 40%);
$grey_dark: darken($grey_light, 60%);
$yellow: #ffb817;
$orange: #ff7a30;

font-family: 'Slabo 27px', serif;
font-family: 'Khula', sans-serif;

*******************************
GENERAL
******************************/
html {
    position: relative;
    min-height: 100%;
}
body {
  background-color:#181820;
  color:#eee;
  font-family: 'Slabo 27px', serif;
  font-weight:300;
}
a {
  text-decoration:none;
}
a, a:visited {
  color:#3b94e3;
}
a:hover {
  color:#cc4ff1;
}
#wrapper {
  position:relative;
  width:90%;
  padding-left: 5%;
  padding-right: 5%;
  min-height:100%;
}
/* CLEARFIX */
.floatFix:before,
.floatFix:after {
  content:"";
  display:table;
}
.floatFix:after {
  clear:both;
}


/******************************
HEADER
******************************/
header {
    text-align: center;
    margin:0;
    padding:0;
    width:100%;
}
h1 {
    font-family: 'Khula', sans-serif;
    font-weight: 800;
    font-size: 5.4em;
    line-height: 1em;
    margin: 1em 0 0 0;
}
h2 {
   font-family: 'Khula', sans-serif;
   font-weight: 800;
   font-size: 1.7em;
   margin:0;
}
.articleTitle {
    font-size: 2em;
    color:#cc4ff1;
}
nav {
   margin:0 0 2em 0;
}
nav ul {
  list-style:none;
  margin: 0;
  padding:0;
}
nav li {
  display:inline-block;
  padding: 0 1em;
}


/******************************
CONTENT
******************************/
h3 {
    font-family: 'Khula', sans-serif;
    font-weight: 800;
    font-size: 1.7em;
    color: #fff;
    margin:1em 0 0 0;
    padding: 0;
}
section {
  clear:both;
  z-index: auto;
  width:99%;
  max-width: 1200px;
  margin:0 auto;
  font-family: 'Slabo 27px', serif;
  font-size: 1.4em;
}
.profilePic {
  border-radius:100%;
  width:15em;
  height:15em;
  margin:0 auto 10px;
  display:block;
}
.postImgWrapper {
    width: 100%;
}
.postImg {
    width: 100%;
    max-width: 800px;
    margin:auto auto;
    align-self: center;
}
.comments {
    padding-bottom:4em;
}


/******************************
FOOTER
******************************/
footer {
    position: absolute;
    z-index: auto;
    right: 0;
    bottom: 0;
    left: 0;
    width:100%;
    height:50px;
    font-size:0.9em;
    text-align:center;
}
.footerIcon {
    width:2.4em;
    height:2.4em;
    opacity: 0.4;
}
footer ul {
  list-style:none;
  margin: 0;
  padding:0;
}
footer li {
  display:inline-block;
  padding: 0 0.5em;
}

